--- a/views/paleta/editar.twig
+++ b/views/paleta/editar.twig
@@ -12,7 +12,7 @@
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Número</label>
 							<div class="col-md-4 col-informacion">
-								<span v-html="model.numero"></span>
+								<span class="form-control" v-html="model.numero"></span>
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Nombre *</label>
@@ -104,6 +104,30 @@
 							<label for="inputName" class="col-md-2 form-label">Título nivel 4</label>
 							<div class="col-md-4 col-informacion">
 								<input type="text" class="form-control" v-model="model.titulo_nivel4" placeholder="Título nivel 4" v-autoname/>
+							</div>
+						</div>
+
+						<div class=" row mb-4">
+							<label for="inputName" class="col-md-2 form-label">Título motivo no pago nivel 1</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_motivo_no_pago_nivel1" placeholder="Título motivo no pago nivel 1" v-autoname/>
+							</div>
+
+							<label for="inputName" class="col-md-2 form-label">Título motivo no pago nivel 2</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_motivo_no_pago_nivel2" placeholder="Título motivo no pago nivel 2" v-autoname/>
+							</div>
+						</div>
+
+						<div class=" row mb-4">
+							<label for="inputName" class="col-md-2 form-label">Título motivo no pago nivel 3</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_motivo_no_pago_nivel3" placeholder="Título motivo no pago nivel 3" v-autoname/>
+							</div>
+
+							<label for="inputName" class="col-md-2 form-label">Título motivo no pago nivel 4</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control" v-model="model.titulo_motivo_no_pago_nivel4" placeholder="Título motivo no pago nivel 4" v-autoname/>
 							</div>
 						</div>
 
