--- a/template_ok/css/style.css
+++ b/template_ok/css/style.css
@@ -6385,7 +6385,7 @@ ul.dropdown-menu li.dropdown ul.dropdown-menu .dropdown-plus-title {
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #4d5875;
+    color: #000000;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #e9edf4;
