--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -223,7 +223,7 @@
 
 					<h4 class="text-primary">MOTIVO DE NO PAGO</h4>
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">Motivo No Pago</label>
+						<label for="inputName" class="col-md-2 form-label">{{ paleta.titulo_motivo_no_pago_nivel1 }}</label>
 						<div class="col-md-4 col-informacion">
 							<select class="form-control form-select select2" v-on:change="cargarMotivoNoPagoNivel2"
 							        v-model="seguimiento.nivel_1_motivo_no_pago_id" placeholder="Seleccione una opción" id="nivel_1_motivo_no_pago_id"
