--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -234,7 +234,7 @@
 					<div id="div_motivo_no_pago">
 						<h4 class="text-primary">MOTIVO DE NO PAGO</h4>
 						<div class=" row mb-4">
-							<label for="inputName" class="col-md-2 form-label">Motivo No Pago</label>
+							<label for="inputName" class="col-md-2 form-label">{{ paleta.titulo_motivo_no_pago_nivel1 }}</label>
 							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2" v-on:change="cargarMotivoNoPagoNivel2"
 								        v-model="seguimiento.nivel_1_motivo_no_pago_id" placeholder="Seleccione una opción" id="nivel_1_motivo_no_pago_id" name="nivel_1_motivo_no_pago_id">
@@ -242,7 +242,7 @@
 								</select>
 							</div>
 
-							<label for="inputName" class="col-md-2 form-label">Descripción</label>
+							<label for="inputName" class="col-md-2 form-label">{{ paleta.titulo_motivo_no_pago_nivel2 }}</label>
 							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2"
 								        v-model="seguimiento.nivel_2_motivo_no_pago_id" placeholder="Seleccione una opción" id="nivel_2_motivo_no_pago_id" name="nivel_2_motivo_no_pago_id">
