--- a/views/producto/lista.twig
+++ b/views/producto/lista.twig
@@ -54,10 +54,10 @@
 							<strong>{{ l.ultimo_seguimiento.nivel4_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel4 }}<br/>
 						{% endif %}
 						{% if l.ultimo_seguimiento.nivel1_motivo_no_pago != '' %}
-							<strong>Motivo No Pago: </strong><br/>{{ l.ultimo_seguimiento.nivel1_motivo_no_pago }}<br/>
+							<strong>{{ l.ultimo_seguimiento.titulo_motivo_no_pago_nivel1 }}: </strong><br/>{{ l.ultimo_seguimiento.nivel1_motivo_no_pago }}<br/>
 						{% endif %}
 						{% if l.ultimo_seguimiento.nivel2_motivo_no_pago != '' %}
-							<strong>Descripción: </strong><br/>{{ l.ultimo_seguimiento.nivel2_motivo_no_pago }}<br/>
+							<strong>{{ l.ultimo_seguimiento.titulo_motivo_no_pago_nivel2 }}: </strong><br/>{{ l.ultimo_seguimiento.nivel2_motivo_no_pago }}<br/>
 						{% endif %}
 						<strong>Usuario: </strong><br/>{{ l.ultimo_seguimiento.usuario }}
 					{% endif %}
@@ -78,10 +78,10 @@
 							<strong>{{ l.ultimo_seguimiento.nivel4_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel4 }}<br/>
 						{% endif %}
 						{% if l.ultimo_seguimiento.nivel1_motivo_no_pago != '' %}
-							<strong>Motivo No Pago: </strong><br/>{{ l.ultimo_seguimiento.nivel1_motivo_no_pago }}<br/>
+							<strong>{{ l.ultimo_seguimiento.titulo_motivo_no_pago_nivel1 }}: </strong><br/>{{ l.ultimo_seguimiento.nivel1_motivo_no_pago }}<br/>
 						{% endif %}
 						{% if l.ultimo_seguimiento.nivel2_motivo_no_pago != '' %}
-							<strong>Descripción: </strong><br/>{{ l.ultimo_seguimiento.nivel2_motivo_no_pago }}<br/>
+							<strong>{{ l.ultimo_seguimiento.titulo_motivo_no_pago_nivel2 }}: </strong><br/>{{ l.ultimo_seguimiento.nivel2_motivo_no_pago }}<br/>
 						{% endif %}
 						<strong>Usuario: </strong><br/>{{ l.ultimo_seguimiento.usuario }}
 					{% endif %}
